# my_game_engine

./: .gitignore  CMakeLists.txt  readme
engine_kernel/: CMakeLists.txt
engine_kernel/includes/kernel/: Application.hpp  Event.hpp  Log.hpp
engine_kernel/includes/kernel/utils/: test.hpp
engine_kernel/src/kernel/: Application.cpp  Window.cpp  Window.hpp
engine_kernel/src/kernel/Rendering/OpenGL/: ShaderProgram.cpp  ShaderProgram.hpp  VertexBuffer.cpp  VertexBuffer.hpp
engine_kernel/src/kernel/utils/: test.cpp
game_editor/: CMakeLists.txt
game_editor/src/: main.cpp
